--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -17,7 +17,7 @@
 
         <div>
             <p>published: 14.06.2014, 12:14</p>
-            <h2><a href="">My first post</a></h2>
+            <h2><a href="">My first post　re</a></h2>
             <p>Aenean eu leo quam. こんにちは！ よろしくお願いします！ </p>
         </div>
 
